Fixed background and fixed overflow

--- a/app/assets/stylesheets/components/_single_stampbook.scss
+++ b/app/assets/stylesheets/components/_single_stampbook.scss
@@ -42,6 +42,8 @@
   background-image:linear-gradient(to bottom, rgba(#0f000c, 0.8), rgba(#030000, 0.6), rgba(#030000, 0.4)), url('https://res.cloudinary.com/laicuroot/image/upload/v1623347607/stampbook_background_qv4nx8.png');
   background-size: cover;
   background-attachment: fixed;
+  overflow: hidden;
+  height: 100vh;
   width:100vw;
 }
 
@@ -256,3 +258,34 @@
   91.67% { transform: translate(-50px, 50px) rotate(300deg); }
   100% { transform: translate(0, 0) rotate(360deg); }
 }
+
+
+@media(min-width: 1440px){
+  .index-stamps-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image:linear-gradient(to bottom, rgba(#0f000c, 0.8), rgba(#030000, 0.6), rgba(#030000, 0.4)), url('https://res.cloudinary.com/laicuroot/image/upload/v1623347607/stampbook_background_qv4nx8.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    background-attachment: fixed;
+    width:100vw;
+    height: 100%;
+  }
+}
+
+@media(min-width: 1441px){
+  .index-stamps-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    background-image:linear-gradient(to bottom, rgba(#0f000c, 0.8), rgba(#030000, 0.6), rgba(#030000, 0.4)), url('https://res.cloudinary.com/laicuroot/image/upload/v1623347607/stampbook_background_qv4nx8.png');
+    background-size: cover;
+    background-attachment: fixed;
+    width:100vw;
+    height: 100vh;
+  }
+}
+
